services/helloworld/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    run: helloworld
spec:
  ports:
  - port: 80
  selector:
    app: helloworld
  type: LoadBalancer
